# G722Codec

./: README.md
G722Codec/: CMakeLists.txt
G722Codec/project/src/Codec/: G722Decode.cpp  G722Decode.h  G722Encode.cpp  G722Encode.h
G722Codec/project/src/Codec/G722/: g722_decode.c  g722_encode.c  g722_interface.c  g722_interface.h
G722Codec/project/src/Startup/: main.cpp
